# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	new file:   CHANGES.md #	modified:   README.md #	new file:   exercises/1_getting_started/exercise.js #	new file:   exercises/1_getting_started/problem.md #	new file:   exercises/1_getting_started/solution/solution.js #	deleted:    exercises/1_getting_startet/exercise.js #	deleted:    exercises/1_getting_startet/problem.md #	deleted:    exercises/1_getting_startet/solution/solution.js #	modified:   exercises/2_sort_me/exercise.js #	modified:   exercises/2_sort_me/problem.md #	modified:   exercises/3_in_every_case/exercise.js #	modified:   exercises/3_in_every_case/problem.md #	modified:   exercises/4_everyone_is_min/exercise.js #	modified:   exercises/4_everyone_is_min/problem.md #	modified:   exercises/5_count_the_comments/exercise.js #	modified:   exercises/5_count_the_comments/problem.md #	renamed:    exercises/6_give_me_overview/exercise.js -> exercises/6_give_me_an_overview/exercise.js #	new file:   exercises/6_give_me_an_overview/problem.md #	renamed:    exercises/6_give_me_overview/solution/solution.js -> exercises/6_give_me_an_overview/solution/solution.js #	deleted:    exercises/6_give_me_overview/problem.md #	modified:   exercises/7_analyze/problem.md #	modified:   exercises/menu.json #	modified:   lib/verify.js #	deleted:    lodash_workshop.js #	new file:   lololodash.js #	modified:   package.json # - Made broad changes to files in response to a request for review by the author, here:   https://github.com/rvagg/workshopper/issues/64 - All changes are summarized in CHANGES.md which is checked in to the root.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lololodash",
   "version": "0.1.0",
-  "description": "lololodash ==========",
+  "description": "A Set of Lo-Dash Javascript Exercises",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,8 @@
     "type": "git",
     "url": "https://github.com/mdunisch/lololodash.git"
   },
-  "bin": "lodash_workshop.js",
+  "bin": "lololodash.js",
+  "preferGlobal": true,
   "keywords": [
     "lodash",
     "underscore",
