--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "lololodash",
   "version": "0.1.0",
   "description": "A Set of Lo-Dash Javascript Exercises",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "lololodash.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/mdunisch/lololodash.git"
