--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/mdunisch/lololodash",
   "dependencies": {
     "lodash": "^2.4.1",
+    "moment": "^2.8.1",
     "workshopper": "^1.3.2",
     "workshopper-exercise": "^1.1.0"
   }
