--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lololodash",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "A Set of Lo-Dash Javascript Exercises",
   "main": "lololodash.js",
   "repository": {
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/mdunisch/lololodash",
   "dependencies": {
+    "diff": "^1.0.8",
     "lodash": "^2.4.1",
     "moment": "^2.8.1",
+    "update-notifier": "^0.2.0",
     "workshopper": "^1.3.2",
     "workshopper-exercise": "^1.1.0"
   }
