--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mdunisch/lololodash",
   "dependencies": {
+    "babel": "^5.8.23",
     "diff": "^1.3.2",
     "lodash": "^3.9.0",
     "moment": "^2.10.2",
