--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/mdunisch/lololodash",
   "dependencies": {
     "babel": "^5.8.23",
-    "colors-tmpl": "~0.1.0",
+    "colors-tmpl": "^1.0.0",
     "diff": "^2.1.3",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
